tests/sources/invalid/classes/class_constructor_syntax_errors.fire
// Malformed constructor parameter lists: fn ClassName(...) { ... } is parsed
// by a separate code path from a normal method (declarations.py's
// _parse_class_definition has a dedicated "constructor" branch in the
// class-body FN dispatch), so these same error conditions as
// class_def_syntax_errors.fire need their own constructor-shaped cases to
// exercise that branch.

// '&' not immediately followed by 'this' (constructor form) is parsed as a
// plain borrowed parameter (not a receiver), so 'other' is consumed as the
// parameter name and parsing then fails at the missing ':'.
class CR1 {
    v: int32;

    fn CR1(&other) {  //~ ERROR FS-PARSE-0010 @18
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// 'owned' not immediately followed by 'this' (constructor form) is parsed as
// the owned-parameter modifier, so 'this2' is consumed as the parameter name
// and parsing then fails at the missing ':'.
class CR2 {
    v: int32;

    fn CR2(owned this2) {  //~ ERROR FS-PARSE-0010 @23
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Constructor parameter type invalid
class CP1 {
    v: int32;

    fn CP1(x: !) {  //~ ERROR FS-PARSE-0010 @15
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Array parameters are not supported for constructors
class CP2 {
    v: int32;

    fn CP2(xs: int32[]) {  //~ ERROR FS-PARSE-0012 @16
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Missing constructor parameter name
class CP3 {
    v: int32;

    fn CP3(: int32) {  //~ ERROR FS-PARSE-0010 @12
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Missing ')' after constructor parameters
class CP4 {
    v: int32;

    fn CP4(x: int32 {  //~ ERROR FS-PARSE-0010 @21
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// Missing '{' to start constructor body
class CP5 {
    v: int32;

    fn CP5(x: int32)
    y: int32 = 1;  //~ ERROR FS-PARSE-0010 @5
}
